@@ -74,8 +74,8 @@
     , "RL_DEFAULT_BATCH_MAX_TEXTURE_UNITS" : "4"
     , "RL_MAX_MATRIX_STACK_SIZE" : "32"
     , "RL_MAX_SHADER_LOCATIONS" : "32"
-    , "RL_CULL_DISTANCE_NEAR" : "0.001"
-    , "RL_CULL_DISTANCE_FAR" : "1000.0"
+    , "RL_CULL_DISTANCE_NEAR" : "0.05"
+    , "RL_CULL_DISTANCE_FAR" : "4000.0"
     , "RL_TEXTURE_WRAP_S" : "0x2802"
     , "RL_TEXTURE_WRAP_T" : "0x2803"
     , "RL_TEXTURE_MAG_FILTER" : "0x2800"
